--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,44 @@ body {
 #navbar {
     position: fixed;
     top: 0px;
-    height: 30px;
+    height: 60px;
+    width: 100%;
     overflow: hidden;
+    background-color: rgb(30, 30, 133);
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+}
+
+#navbar > a {
+    text-decoration: none;
+    color: white;
+    margin: 0 25px;
+    font-size: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ; 
 }
 
 #welcome-section > h1 {
-    margin-top: 0px;
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    margin-bottom: 0px;
+}
+
+#welcome-section > h3 {
+    font-family: Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 24px;
+    color: rgb(90, 90, 133);
 }
 
 #welcome-section {
-    background-color: rgb(65, 65, 65);
+    background-color: rgb(51, 51, 51);
     color:white;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /*align vertical*/
+    align-items: center; /*align horizontal*/
 }
+
