--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ a {
     flex-direction: row;
     justify-content: right;
     align-items: center;
+    z-index: 2;
 }
 
 #navbar > a {
@@ -76,9 +77,11 @@ a {
 .project-tiles {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
+    justify-content: center; /*align vertical*/
+    align-items: center; /*align horizontal*/
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
 
 #contact {
@@ -105,15 +108,6 @@ a {
 footer {
     position: absolute;
     bottom: 0;   
-}
-
-.project-tiles {
-    display: flex;
-    flex-direction: row;
-    justify-content: center; /*align vertical*/
-    align-items: center; /*align horizontal*/
-    height: 100%;
-    width: 100%;
 }
 
 .project-tile {
@@ -150,12 +144,8 @@ img {
         flex-direction: column;
     }
 
-    .project-tile {
-        width: 80%;
-    }
-
     img {
         width: 300px;
-        max-width: 80%;
+        max-width: 100%;
     }
   }
